--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
             <scope>runtime</scope>
         </dependency>
         
+        <!-- PostgreSQL for Render.com deployment -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        
         <!-- Utilities -->
         <dependency>
             <groupId>org.projectlombok</groupId>
