Configure Supabase database and update deployment docs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -80,7 +80,7 @@ spring.datasource.name=task_management_db
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/task_management_db?ServerTimezone=UTC&zeroDateTimeBehavior=convertToNull}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Qwertyuiop}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:com.mysql.cj.jdbc.Driver}
 spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.cache=false
 spring.main.allow-circular-references=true
